Add MA 11, 31, and 98.

--- a/02_madhyama/01_First/02_Related_To_Action/MA_016.md
+++ b/02_madhyama/01_First/02_Related_To_Action/MA_016.md
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 1: Sevens | 16. The Kālāmas'
+title: 'The Medium Discourses | Chapter 2: Related to Action | 16. The Kālāmas'
 type: kramdown
 base: ../../../
-previous: ../01_Sevens/MA_010.html
-next: ../05_Related_To_Cultivation/index.html
+previous: ../02_Related_To_Action/MA_011.html
+next: ../03_Related_To_Sariputra/MA_031.html
 ---
 
 # [The Medium Discourses](../../index.html)
-## [Chapter 1: Sevens](index.html)
+## Chapter 2: Related to Action
 ### 16. The Kālāmas
 
 1\. Thus I have heard: One time, the Buddha traveled to the country of Kālāma accompanied by a great assembly of monks. He went to [Kesaputta] and stayed in the rosewood grove to the north.
