--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_079.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_079.md
@@ -71,10 +71,10 @@ Venerable Aniruddha told him, “Wealthy man, you give your own answer to this q
 16\. “If they don’t base it on two or three trees, they base it on one grove. If they don’t base it on one grove, they base it on two or three groves. If they don’t base it on two or three groves, they base it on one village. If they don’t base it on one village, they base it on two or three villages. If they don’t base it on two or three villages, they base it on one country. If they don’t base it on one country, they base it on two or three countries. If they don’t base it on two or three countries, they base it on the Earth up to the ocean. Their thinking is freed, and they accomplish the filling of it with the liberation of the great mind. Their mind is liberated to that extent and doesn’t go beyond it. This is called the liberation of the great mind.
 {: #p16}
 
-17\. “Wealthy man, what is the liberation of measureless mind? Suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They accomplish the filling of one direction with both their mind and kindness. They do so in two, three, and four directions, the four counterpoints, and up and down. They completely pervade them all with both their mind and kindness. It’s without fetters, without enmity, without anger, without disputation, and very broad and great. Measureless and well cultivated, they accomplish the filling of the whole world.
+17\. “Wealthy man, what is the liberation of measureless mind? Suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They pervade one direction with their mind together with kindness. They do so in two, three, and four directions, the four counterpoints, and up and down. They completely pervade them all with their mind together with kindness without bondage, without enmity, without anger, and without quarrel. It’s broadly, greatly, and measurelessly well cultivated, and they accomplish the filling of the whole world.
 {: #p17}
 
-18\. “So it is with both their mind and compassion, joy, and equanimity. Each is without fetters, without enmity, without anger, without disputation, and very broad and great. Measureless and well cultivated, they accomplish the filling of the whole world with them. This is called the liberation of measureless mind.
+18\. “Thus, their mind together with compassion, joy, and equanimity is without bondage, without enmity, without anger, and without quarrel. It’s broadly, greatly, and measurelessly well cultivated, and they accomplish the filling of the whole world. This is called the liberation of measureless mind.
 {: #p18}
 
 19\. “Wealthy man, are these two liberations of the great mind and the measureless mind different both in meaning and name, or are they the same in meaning but different in name?”
