--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_082.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_082.md
@@ -4,7 +4,7 @@ title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 82. Crickets'
 type: kramdown
 base: ../../../
 previous: MA_081.html
-next: ../../04_Discernment/15_Pairs/MA_186.html
+next: ../09_Cause/MA_098.html
 ---
 
 # [The Medium Discourses](../../index.html)
