Fixed numerous bad links, etc.

--- a/03_samyukta/SA_04/SA4_1.md
+++ b/03_samyukta/SA_04/SA4_1.md
@@ -4,10 +4,10 @@ title: 'The Related Discourses | 4. Truths | 1. Turning the Dharma Wheel'
 type: kramdown
 base: ../../
 previous: index.html
-next: ../SA_5/index.html
+next: ../SA_05/index.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [4. Truths](index.html)
 ### 1. Turning the Dharma Wheel
 
