--- a/03_samyukta/SA_12/SA12_20.md
+++ b/03_samyukta/SA_12/SA12_20.md
@@ -7,7 +7,7 @@ previous: index.html
 next: SA12_21.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
 ### 20. Junior Monks
 
