--- a/03_samyukta/SA_12/SA12_21.md
+++ b/03_samyukta/SA_12/SA12_21.md
@@ -7,7 +7,7 @@ previous: SA12_20.html
 next: SA12_30.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
 ### 21. Fruitful Monks
 
