--- a/03_samyukta/SA_12/SA12_33.md
+++ b/03_samyukta/SA_12/SA12_33.md
@@ -7,7 +7,7 @@ previous: SA12_30.html
 next: SA12_34.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
 ### 33. Seven Fruits
 
