--- a/03_samyukta/SA_12/SA12_34.md
+++ b/03_samyukta/SA_12/SA12_34.md
@@ -7,7 +7,7 @@ previous: SA12_33.html
 next: SA12_37.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
 ### 34. Abodes of Mindfulness
 
