--- a/03_samyukta/SA_13/SA13_25.md
+++ b/03_samyukta/SA_13/SA13_25.md
@@ -7,7 +7,7 @@ previous: SA13_24.html
 next: SA13_26.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
 ### 25. Wrong and Right
 
