--- a/03_samyukta/SA_13/SA13_74.md
+++ b/03_samyukta/SA_13/SA13_74.md
@@ -7,7 +7,7 @@ previous: SA13_30.html
 next: SA13_75.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
 ### 74. The Eightfold Path
 
