--- a/03_samyukta/SA_14/SA14_17.md
+++ b/03_samyukta/SA_14/SA14_17.md
@@ -7,7 +7,7 @@ previous: SA14_3.html
 next: ../SA_34/index.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [14. Mindfulness of Breathing](index.html)
 ### 17. Attaining Four, Seven, and Two Things
 
