--- a/03_samyukta/SA_14/SA14_3.md
+++ b/03_samyukta/SA_14/SA14_3.md
@@ -7,7 +7,7 @@ previous: index.html
 next: SA14_17.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [14. Mindfulness of Breathing](index.html)
 ### 3. Cultivating Mindfulness of Breathing
 
