--- a/03_samyukta/SA_35/SA35_43.md
+++ b/03_samyukta/SA_35/SA35_43.md
@@ -7,7 +7,7 @@ previous: SA35_40.html
 next: SA35_46.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [35. Views](index.html)
 ### 43. Wrong View Regarding Personal Ability
 
