--- a/03_samyukta/SA_35/SA35_46.md
+++ b/03_samyukta/SA_35/SA35_46.md
@@ -7,7 +7,7 @@ previous: SA35_43.html
 next: SA35_49.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [35. Views](index.html)
 ### 46. Wrong View Regarding the Afterlife
 
