--- a/03_samyukta/SA_35/SA35_52.md
+++ b/03_samyukta/SA_35/SA35_52.md
@@ -7,7 +7,7 @@ previous: SA35_49.html
 next: SA35_55.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [35. Views](index.html)
 ### 52. Wrong View Regarding Purity
 
