--- a/03_samyukta/SA_35/SA35_55.md
+++ b/03_samyukta/SA_35/SA35_55.md
@@ -7,7 +7,7 @@ previous: SA35_52.html
 next: SA35_58.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [35. Views](index.html)
 ### 55. Wrong View Regarding the Lack of Knowing and Seeing
 
