--- a/03_samyukta/SA_35/SA35_58.md
+++ b/03_samyukta/SA_35/SA35_58.md
@@ -7,7 +7,7 @@ previous: SA35_55.html
 next: SA35_61.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [35. Views](index.html)
 ### 58. Wrong View Regarding Knowing and Seeing
 
