--- a/03_samyukta/SA_35/SA35_61.md
+++ b/03_samyukta/SA_35/SA35_61.md
@@ -7,7 +7,7 @@ previous: SA35_58.html
 next: SA35_64.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [35. Views](index.html)
 ### 61. Wrong View Regarding Actions
 
