--- a/03_samyukta/SA_35/SA35_7.md
+++ b/03_samyukta/SA_35/SA35_7.md
@@ -7,7 +7,7 @@ previous: index.html
 next: SA35_40.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [35. Views](index.html)
 ### 7. The Cause of Attachment and Sorrow
 
