--- a/03_samyukta/SA_01/SA1_1.md
+++ b/03_samyukta/SA_01/SA1_1.md
@@ -7,7 +7,7 @@ previous: index.html
 next: SA1_2.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
 ### 1. Impermanent
 
