--- a/03_samyukta/SA_01/SA1_2.md
+++ b/03_samyukta/SA_01/SA1_2.md
@@ -7,7 +7,7 @@ previous: SA1_1.html
 next: SA1_3.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
 ### 2. Painful
 
