--- a/03_samyukta/SA_12/SA12_30.md
+++ b/03_samyukta/SA_12/SA12_30.md
@@ -7,7 +7,7 @@ previous: SA12_21.html
 next: SA12_33.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
 ### 30. A Certain Monk
 
