--- a/03_samyukta/SA_12/SA12_37.md
+++ b/03_samyukta/SA_12/SA12_37.md
@@ -7,7 +7,7 @@ previous: SA12_34.html
 next: ../SA_13/index.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [12. Factors of Awakening](index.html)
 ### 37. Seven Fruits
 
