--- a/03_samyukta/SA_13/SA13_75.md
+++ b/03_samyukta/SA_13/SA13_75.md
@@ -7,7 +7,7 @@ previous: SA13_74.html
 next: ../SA_14/index.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
 ### 75. The Eightfold Path (2)
 
