--- a/03_samyukta/SA_35/SA35_40.md
+++ b/03_samyukta/SA_35/SA35_40.md
@@ -7,7 +7,7 @@ previous: SA35_7.html
 next: SA35_43.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [35. Views](index.html)
 ### 40. Wrong View Regarding Actions
 
