--- a/03_samyukta/SA_35/SA35_64.md
+++ b/03_samyukta/SA_35/SA35_64.md
@@ -7,7 +7,7 @@ previous: SA35_61.html
 next: SA35_67.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [35. Views](index.html)
 ### 64. Wrong View Regarding Actions
 
