--- a/03_samyukta/SA_35/SA35_67.md
+++ b/03_samyukta/SA_35/SA35_67.md
@@ -7,7 +7,7 @@ previous: SA35_64.html
 next: ../index.html
 ---
 
-# [The Related Discourses](../../index.html)
+# [The Related Discourses](../index.html)
 ## [35. Views](index.html)
 ### 67. Wrong View Regarding Rebirth
 
