Added MA 17 and other minor changes.

--- a/02_madhyama/01_First/01_Sevens/MA_010.md
+++ b/02_madhyama/01_First/01_Sevens/MA_010.md
@@ -34,7 +34,7 @@ next: ../02_Related_To_Action/MA_011.html
 7\. “When someone rightly considers, contaminants of desire yet to arise won’t arise, and those that have already arisen will readily cease. Contaminants of existence and ignorance yet to arise won’t arise, and those that have already arisen will readily cease.
 {:#p7}
 
-8\. “Because someone doesn’t know the teaching as it truly is, they think things that shouldn’t be thought and don’t think things that should be thought. Because they think things that shouldn’t be thought and don’t think things that should be thought, contaminants of desire yet to arise will arise, and those that have already arisen will readily increase. Contaminants of existence and ignorance yet to arise will arise, and those that have already arisen will readily increase.
+8\. “Because someone doesn’t know the teaching as it truly is, they think things that shouldn’t be thought and don’t think things that should be thought. Because they think things that shouldn’t be thought and don’t think things that should be thought, contaminants of desire yet to arise will arise, and those that have already arisen will readily increase. Contaminants of existence [432a] and ignorance yet to arise will arise, and those that have already arisen will readily increase.
 {:#p8}
 
 9\. “Well-versed noble disciples hear the right teaching and meet true friends. They are disciplined by the noble teaching and know the teaching as it truly is.
