Corrected 12.1.5 to "vomit and diarrhea" after researching obscure terms.

--- a/04_ekottarika/EA_12_01.md
+++ b/04_ekottarika/EA_12_01.md
@@ -25,7 +25,7 @@ next: EA_19_02.html
 
 #### Contemplation of Body
 
-5\. “How does a monk contemplate his body internally and relaxes? Here, a monk contemplates this body according to its nature and activity. From head to toe and from toe to head, he contemplates all the impurities in his body, none of which are desirable. Just as he observes this body with its hair, beard, nails, teeth, sinews, bones, marrow, brain, fat, intestines, stomach, heart, liver, spleen, and kidneys, he observes and knows them all these parts. He should observe and know its dung, urine, two organs that produce fevers, tears, spit, blood, grease, and bile, none of which are desirable. Thus, monks, you should contemplate the body and relax, turning away bad thoughts and having no grief.
+5\. “How does a monk contemplate his body internally and relaxes? Here, a monk contemplates this body according to its nature and activity. From head to toe and from toe to head, he contemplates all the impurities in his body, none of which are desirable. Just as he observes this body with its hair, beard, nails, teeth, sinews, bones, marrow, brain, fat, intestines, stomach, heart, liver, spleen, and kidneys, he observes and knows them all these parts. He should observe and know its dung, urine, vomit, diarrhea, tears, spit, blood, grease, and bile, none of which are desirable. Thus, monks, you should contemplate the body and relax, turning away bad thoughts and having no grief.
 {: #p5}
 
 6\. “Furthermore, a monk returns to contemplating this body as possessing the earth element and the elements of water, fire, and air. Thus, a monk contemplates this body.
