Converted SA 1.3-4 to markdown. Added T110, SA 1.148-9.

--- a/03_samyukta/SA_01/SA1_147.md
+++ b/03_samyukta/SA_01/SA1_147.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 147. Three Upright Men'
 type: kramdown
 base: ../../
 previous: SA1_146.html
-next: ../SA_02/index.html
+next: SA1_148.html
 ---
 
 # [The Related Discourses](../index.html)
@@ -17,7 +17,7 @@ next: ../SA_02/index.html
 2\. At that time, there were three upright men who had left home not long before. They were Venerable Aniruddha, Venerable Nandika, and Venerable Kimbila.
 {:#p2}
 
-3\. It was then that the Bhagavān knew what they were thinking in their minds, and so he instructed them. “Monks, this mind, this thinking, this awareness should be reflected upon in this way: ‘Don’t reflect in this way, stop this desire, stop this form.’ Someone who realizes this abides perfectly. Monk, would have form if it were permanent, unchanging, and a correct abode?”
+3\. It was then that the Bhagavān knew what they were thinking in their minds, and so he instructed them. “Monks, this mind, this thinking, this awareness should be reflected upon in this way: ‘Don’t reflect in this way, stop this desire, stop this form.’ Someone who realizes this abides perfectly. Monk, would there be form if it were permanent, unchanging, and a correct abode?”
 {:#p3}
 
 The monks said to the Buddha, “No, Bhagavān.”
@@ -35,7 +35,7 @@ The monks said to the Buddha, “No, Bhagavān.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 August 2020
+Last Revised: 29 August 2020
 {: .revised}
 
 ---
