--- a/03_samyukta/SA_04/SA4_1.md
+++ b/03_samyukta/SA_04/SA4_1.md
@@ -74,7 +74,7 @@ Kauṇḍinya said to the Buddha, “I’ve known it, Sugata!”
 
 ### Notes
 
-1. {:#n1} This sutra is parallel with <a href="https://suttacentral.net/sn56.11" target="_blank"><em>SN</em> 56.11</a>, T109, and T110. [\[back\]](#ref1)
+1. {:#n1} This sutra is parallel with <a href="https://suttacentral.net/sn56.11" target="_blank"><em>SN</em> 56.11</a>, [T109](../alternates/T109.html), and [T110](../alternates/T110.html). [\[back\]](#ref1)
 
 ---
 
