--- a/03_samyukta/SA_01/SA1_1.md
+++ b/03_samyukta/SA_01/SA1_1.md
@@ -11,33 +11,31 @@ next: SA1_2.html
 ## [1. The Aggregates](index.html)
 ### 1. Impermanent
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān told the monks: “You must contemplate form to be impermanent. Such contemplation then is right view.[\[2\]](#n1){:#ref2} Rightly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will come to an end. When your delight and greed for it have ended, I say your mind is liberated.
+2\. It was then that the Bhagavān addressed the monks, “You must contemplate form to be impermanent. Such contemplation then is right view.[\[2\]](#n1){:#ref2} Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will come to an end. When your delight and greed for it have ended, I say your mind is liberated.
 {: #p2}
 
-3\. “Thus contemplate feeling, perception, volition, and consciousness to be impermanent. Such contemplation then is right view. Rightly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for them will come to an end. When your delight and greed for them have ended, I say your mind is liberated.
-{: #p3}
+3\. “Thus contemplate feeling … perception … volition … consciousness to be impermanent. Such contemplation then is right view. Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will come to an end. When your delight and greed for it have ended, I say your mind is liberated.
+{:#p3}
 
-4\. “So it is, monks, that if your mind is liberated and you wants to realize it yourself, then you can realize: ‘My births have ended; the religious practice has been established; and the task has been done.’ You yourself will know that you won’t be subject to a later existence.”
-{: #p4}
+4\. “So it is, monks, that if your mind is liberated and you want to realize it yourself, then you can realize, ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+{:#p4}
 
 5\. The monks who heard what the Buddha had taught then rejoiced and handed it down.
 {: #p5}
 
 ### Notes
 
-1. {:#n1} This sutra is parallel with <a href="https://suttacentral.net/sn22.12" target="_blank"><em>SN</em> 22.12</a> and <a href="https://suttacentral.net/sn22.51" target="_blank">51</a>. [\[back\]](#ref1)
-
-2. {:#n2} Yinshun amends <em>right contemplation</em> to <em>right view</em> in this sutra citing the nearly identical passage at <em>SN</em> 22.51 and SA 2.1.
- [\[back\]](#ref2)
+1. {:#n1} This sutra is parallel with [SN 22.12](https://suttacentral.net/sn22.12){:target="_blank"} and [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} Yinshun amends *correct contemplation* to *right view* in this sutra citing the nearly identical passage at SN 22.51 and SĀ 2.1. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 27 October 2019
+Last Revised: 29 August 2020
 {: .revised}
 
 ---
