--- a/03_samyukta/SA_01/SA1_2.md
+++ b/03_samyukta/SA_01/SA1_2.md
@@ -11,31 +11,30 @@ next: SA1_3.html
 ## [1. The Aggregates](index.html)
 ### 2. Painful
 
-
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān told the monks: “You must contemplate form to be painful. Such contemplation then is right view. Rightly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will come to an end. When your delight and greed for it have ended, I say your mind is liberated.
+2\. It was then that the Bhagavān addressed the monks, “You must contemplate form to be painful. Such contemplation then is right view. Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will come to an end. When your delight and greed for it have ended, I say your mind is liberated.
 {: #p2}
 
-3\. “Thus contemplate feeling, perception, volition, and consciousness to be painful. Such contemplation then is right view. Rightly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for them will come to an end. When your delight and greed for them have ended, I say your mind is liberated.
-{: #p3}
+3\. “Thus contemplate feeling … perception … volition … consciousness to be painful. Such contemplation then is right view. Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will come to an end. When your delight and greed for it have ended, I say your mind is liberated.
+{:#p3}
 
-4\. “So it is, monks, that if your mind is liberated and you wants to realize it yourself, then you can realize: ‘My births have ended; the religious practice has been established; and the task has been done.’ You yourself will know that you won’t be subject to a later existence.”
-{: #p4}
+4\. “So it is, monks, that if your mind is liberated and you want to realize it yourself, then you can realize, ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+{:#p4}
 
-5\. The monks who heard what the Buddha had taught then rejoiced and handed it down.'
+5\. The monks who heard what the Buddha had taught then rejoiced and handed it down.
 {: #p5}
 
 ### Notes
 
-1. {:#n1} This sutra is reconstituted according to the description at 1a14, replacing ‘impermanent’ with ‘painful’ in <em>SA</em> 1.1. It’s parallel to <a href="https://suttacentral.net/sn22.13" target="_blank"><em>SN</em> 22.13</a> and <a href="https://suttacentral.net/sn22.51" target="_blank">22.51</a>. [\[back\]](#ref1)
+1. {:#n1} This sutra is reconstituted according to the description at T99.1a14, replacing ‘impermanent’ with ‘painful’ in SĀ 1.1. It’s parallel to [SN 22.13](https://suttacentral.net/sn22.13){:target="_blank"} and [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 27 October 2019
+Last Revised: 29 August 2020
 {: .revised}
 
 ---
