Added index of SC translations of SA 36, other corrections.

--- a/03_samyukta/alternates/T109.md
+++ b/03_samyukta/alternates/T109.md
@@ -4,7 +4,7 @@ title: 'Taisho 109: The Turning the Dharma Wheel Sutra'
 type: kramdown
 base: ../../../
 previous: T102.html
-next: ../index.html
+next: T110.html
 ---
 
 # [The Related Discourses](../../index.html)
