--- a/03_samyukta/SA_35/SA35_67.md
+++ b/03_samyukta/SA_35/SA35_67.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 35. Views | 67. Wrong View Regarding Rebirth'
 type: kramdown
 base: ../../
 previous: SA35_64.html
-next: ../alternates/T109.html
+next: ../SA_36/index.html
 ---
 
 # [The Related Discourses](../index.html)
