--- a/03_samyukta/alternates/T102.md
+++ b/03_samyukta/alternates/T102.md
@@ -3,7 +3,7 @@ layout: default
 title: 'Taisho 102: The Five Aggregates Are Empty Sutra'
 type: kramdown
 base: ../../../
-previous: ../SA_35/SA35_67.html
+previous: T101_15.html
 next: T109.html
 ---
 
