--- a/03_samyukta/alternates/T110.md
+++ b/03_samyukta/alternates/T110.md
@@ -4,7 +4,7 @@ title: 'Taisho 110: The Three Turnings of the Dharma Wheel Sūtra'
 type: kramdown
 base: ../../../
 previous: T109.html
-next: ../index.html
+next: T112.html
 ---
 
 # [The Related Discourses](../../index.html)
