--- a/03_samyukta/SA_01/SA1_2.md
+++ b/03_samyukta/SA_01/SA1_2.md
@@ -14,16 +14,16 @@ next: SA1_3.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You must contemplate form to be painful. Such contemplation then is right view. Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will come to an end. When your delight and greed for it have ended, I say your mind is liberated.
+2\. It was then that the Bhagavān addressed the monks, “You must contemplate form to be painful. Such contemplation then is right view. Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will end. When your delight and greed for it have ended, I say your mind is liberated.
 {: #p2}
 
-3\. “Thus contemplate feeling … perception … volition … consciousness to be painful. Such contemplation then is right view. Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will come to an end. When your delight and greed for it have ended, I say your mind is liberated.
+3\. “Thus contemplate feeling … perception … volition … consciousness to be painful. Such contemplation then is right view. Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will end. When your delight and greed for it have ended, I say your mind is liberated.
 {:#p3}
 
-4\. “So it is, monks, that if your mind is liberated and you want to realize it yourself, then you can realize, ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+4\. “Thus, monks, that if your mind is liberated and you want to realize it yourself, then you can realize this: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p4}
 
-5\. The monks who heard what the Buddha had taught then rejoiced and handed it down.
+5\. The monks who heard what the Buddha taught then rejoiced and handed it down.
 {: #p5}
 
 ### Notes
@@ -34,7 +34,7 @@ next: SA1_3.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 29 August 2020
+Last Revised: 4 September 2020
 {: .revised}
 
 ---
