Edited translation of SA 1.1-4.

--- a/03_samyukta/SA_01/SA1_2.md
+++ b/03_samyukta/SA_01/SA1_2.md
@@ -14,13 +14,13 @@ next: SA1_3.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You must contemplate form to be painful. Such contemplation then is right view. Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will end. When your delight and greed for it have ended, I say your mind is liberated.
+2\. It was then that the Bhagavān addressed the monks, “You must observe that form is painful. Such observation then is right view. Correctly observing it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will end. When your delight and greed for it have ended, that’s said to be the mind’s liberation.
 {: #p2}
 
-3\. “Thus contemplate feeling … perception … volition … consciousness to be painful. Such contemplation then is right view. Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will end. When your delight and greed for it have ended, I say your mind is liberated.
+3\. “Thus observe that feeling … perception … volition … consciousness is painful. Such observation then is right view. Correctly observing it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will end. When your delight and greed for it have ended, that’s said to be the mind’s liberation.
 {:#p3}
 
-4\. “Thus, monks, that if your mind is liberated and you want to realize it yourself, then you can realize this: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+4\. “Thus, monks, if your mind is liberated and you want to realize it yourself, then you will realize this: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p4}
 
 5\. The monks who heard what the Buddha taught then rejoiced and approved.
@@ -28,13 +28,13 @@ next: SA1_3.html
 
 ### Notes
 
-1. {:#n1} This sutra is reconstituted according to the description at T99.1a14, replacing ‘impermanent’ with ‘painful’ in SĀ 1.1. It’s parallel to [SN 22.13](https://suttacentral.net/sn22.13){:target="_blank"} and [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra has been reconstituted following the description of variant sūtras found at *T* 99.1a14, which replaces ‘impermanent’ in SĀ 1.1 with ‘painful.’ It’s parallel with [SN 22.13](https://suttacentral.net/sn22.13){:target="_blank"} and [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 17 September 2020
 {: .revised}
 
 ---
