--- a/03_samyukta/SA_01/SA1_1.md
+++ b/03_samyukta/SA_01/SA1_1.md
@@ -14,13 +14,13 @@ next: SA1_2.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You must contemplate form to be impermanent. Such contemplation then is right view.[\[2\]](#n1){:#ref2} Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will end. When your delight and greed for it have ended, I say your mind is liberated.
+2\. It was then that the Bhagavān addressed the monks, “You must observe that form is impermanent. Such observation then is right view. Correctly observing it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will end. When your delight and greed for it have ended, that’s said to be the mind’s liberation.
 {: #p2}
 
-3\. “Thus contemplate feeling … perception … volition … consciousness to be impermanent. Such contemplation then is right view. Correctly contemplating it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will end. When your delight and greed for it have ended, I say your mind is liberated.
+3\. “Thus observe that feeling … perception … volition … consciousness is impermanent. Such observation then is right view. Correctly observing it, you’ll become disillusioned. Being disillusioned, your delight and greed for it will end. When your delight and greed for it have ended, that’s said to be the mind’s liberation.
 {:#p3}
 
-4\. “Thus, monks, that if your mind is liberated and you want to realize it yourself, then you can realize this: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+4\. “Thus, monks, if your mind is liberated and you want to realize it yourself, then you will realize this: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p4}
 
 5\. The monks who heard what the Buddha taught then rejoiced and approved.
@@ -28,14 +28,14 @@ next: SA1_2.html
 
 ### Notes
 
-1. {:#n1} This sutra is parallel with [SN 22.12](https://suttacentral.net/sn22.12){:target="_blank"} and [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} Yinshun amends *correct contemplation* to *right view* in this sutra citing the nearly identical passages at SN 22.51 and SĀ 2.1. [\[back\]](#ref2)
+1. {:#n1} This sūtra is parallel with [SN 22.12](https://suttacentral.net/sn22.12){:target="_blank"} and [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}. The next three sūtras are variants that follow this template while substituting the other three marks (‘painful,’ ‘empty,’ and ‘not self’) for ‘impermanent.’ [\[back\]](#ref1)
+2. {:#n2} Yinshun amends *correct observation* to *right view* in this sūtra citing the nearly identical passages at [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"} and SĀ 2.1. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 17 September 2020
 {: .revised}
 
 ---
