--- a/03_samyukta/SA_01/SA1_5.md
+++ b/03_samyukta/SA_01/SA1_5.md
@@ -9,32 +9,32 @@ next: SA1_6.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 5. Correctly Considered
+### 5. Correctly Contemplated
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You must correctly consider form, contemplate form to be impermanent, and know it as it really is. Why is that? Monks, when you correctly consider form, contemplate form to be impermanent, and know it as it really is, it stops desire and greed for form. When desire and greed are stopped, I say your mind is liberated.
+2\. It was then that the Bhagavān addressed the monks, “You must correctly contemplate form, observing that form is impermanent and knowing it as it really is. Why is that? Monks, when you correctly contemplate form, observing that form is impermanent and knowing it as it really is, it stops desire and greed for form. When desire and greed for it are stopped, that’s said to be the mind’s liberation.
 {:#p2}
 
-3\. “Thus, you must correctly consider sensation … perception … volition … consciousness, contemplate consciousness to be impermanent, and know it as it really is. Why is that? When you correctly consider consciousness, contemplate consciousness to be impermanent, [and know it as it really is,] it stops desire and greed for consciousness. When desire and greed are stopped, I say your mind is liberated.
+3\. “Thus, you must correctly contemplate feeling … perception … volition … consciousness, observing that consciousness is impermanent and knowing it as it really is. Why is that? When you correctly contemplate consciousness, observing that consciousness is impermanent and knowing it as it really is, it stops desire and greed for consciousness. When desire and greed for it are stopped, that’s said to be the mind’s liberation.
 {:#p3}
 
-4\. “Thus, if someone whose mind is liberated wants to realize it themselves, then they can realize this: ‘My births have been ended; the religious practice has been established; and the task has been accomplished. I myself know that I won’t be subject to a later existence.’[\[2\]](#n2){:#ref2}
+4\. “Thus, if someone whose mind is liberated wants to realize it themselves, then they will realize this: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”[\[2\]](#n2){:#ref2}
 {:#p4}
 
 5\. The monks who heard what the Buddha taught then rejoiced and approved.
 {:#p5}
 
 ### Notes
-1. {:#n1} This sutra is parallel to [SN 22.52](https://suttacentral.net/sn22.52){:target="_blank"} and SĀ 2.5. [\[back\]](#ref1)
-2. {:#n2} The Taisho includes an abbreviated sutra note identical to the one found in SA 1.1 which reads: 如是正思惟無常，苦、空、非我亦復如是. However, it appears to be inconsistent with the summary verse at the end of SĀ 1.10, and the parallel sutra at SĀ 2.5 doesn’t have these variants. I have followed Yinshun’s lead in removing the note. [\[back\]](#ref2)
+1. {:#n1} This sūtra is parallel with [SN 22.52](https://suttacentral.net/sn22.52){:target="_blank"} and SĀ 2.5. [\[back\]](#ref1)
+2. {:#n2} The *Taisho* edition includes a note describing variant sūtra identical to the one found in SĀ 1.1; however, these variants would be inconsistent with the summary verse at the end of SĀ 1.10, and the parallel sūtra at SĀ 2.5 doesn’t have these variants. I have followed Yinshun’s lead in removing the note. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 17 September 2020
 {: .revised}
 
 ---
