--- a/03_samyukta/SA_01/SA1_9.md
+++ b/03_samyukta/SA_01/SA1_9.md
@@ -14,23 +14,23 @@ next: SA1_10.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you don’t know and don’t understand form, don’t become free of desire for it, and your mind isn’t liberated, you aren’t able to transcend the fear of birth, old age, illness, and death. Thus, when you don’t know and don’t understand sensation … perception … volition … consciousness, don’t become free of desire for it, and your mind isn’t liberated, you aren’t able to transcend the fear of birth, old age, illness, and death.
+2\. It was then that the Bhagavān addressed the monks, “When you don’t know, don’t understand, don’t become free of desire for form, your mind isn’t liberated, and you aren’t able to transcend the fear of birth, old age, illness, and death. Thus, when you don’t know, don’t understand, and don’t become free of desire for feeling … perception … volition … consciousness, your mind isn’t liberated, and you aren’t able to transcend the fear of birth, old age, illness, and death.
 {:#p2}
 
-3\. “Monks, if you know and understand form, if you become free of desire for it, and your mind is liberated, you’ll be able to transcend the fear of birth, old age, illness, and death. Thus, if you know and understand sensation … perception … volition … consciousness, if you become free of desire for them, and your mind is liberated, you’ll be able to transcend the fear of birth, old age, illness, and death.”
+3\. “Monks, if you know, understand, and become free of desire for form, your mind is liberated, and you’ll be able to transcend the fear of birth, old age, illness, and death. Thus, if you know, understand, and become free of desire for feeling … perception … volition … consciousness, your mind is liberated, and you’ll be able to transcend the fear of birth, old age, illness, and death.”
 {:#p3}
 
 4\. The monks who heard what the Buddha taught then rejoiced and approved.
 {:#p4}
 
 ### Notes
-1. {:#n1} This sutra is parallel to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and SĀ 2.9. [\[back\]](#ref1)
+1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with SĀ 2.9. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 18 September 2020
 {: .revised}
 
 ---
