--- a/03_samyukta/SA_01/SA1_6.md
+++ b/03_samyukta/SA_01/SA1_6.md
@@ -14,23 +14,23 @@ next: SA1_7.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you don’t know and don’t understand form and [1b] don’t stop and become free of desire for it, you aren’t able to stop suffering. Thus, when you don’t know and don’t understand sensation … perception … volition … consciousness and don’t stop and become free of desire for it, you aren’t able to stop suffering.
+2\. It was then that the Bhagavān addressed the monks, “When you don’t know and don’t understand form and [1b] don’t stop and don’t become free of desire for it, you aren’t able to stop suffering. Thus, when you don’t know and don’t understand feeling … perception … volition … consciousness and don’t stop and don’t become free of desire for it, you aren’t able to stop suffering.
 {:#p2}
 
-3\. “Monks, if you know and understand form and stop and become free of desire for it, you’ll be able to end suffering. Thus, if you know and understand sensation … perception … volition … consciousness and end and become free of desire for it, you’ll be able to end suffering.”
+3\. “Monks, if you know and understand form and stop and become free of desire for it, you’ll be able to end suffering. Thus, if you know and understand feeling … perception … volition … consciousness and end and become free of desire for it, you’ll be able to end suffering.”
 {:#p3}
 
 4\. The monks who heard what the Buddha taught then rejoiced and approved.
 {:#p4}
 
 ### Notes
-1. {:#n1} This sutra is parallel to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and SĀ 2.6. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and SĀ 2.6. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 17 September 2020
 {: .revised}
 
 ---
