--- a/03_samyukta/SA_01/SA1_10.md
+++ b/03_samyukta/SA_01/SA1_10.md
@@ -14,10 +14,10 @@ next: SA1_145.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you delight in form, you delight in suffering. Delighting in suffering, you can’t liberate yourself from suffering. Thus, when you delight in sensation … perception … volition … consciousness, you delight in suffering. Delighting in suffering, you can’t liberate yourself from suffering.
+2\. It was then that the Bhagavān addressed the monks, “When you delight in form, you delight in suffering. Delighting in suffering, you can’t be liberated from suffering. Thus, when you delight in feeling … perception … volition … consciousness, you delight in suffering. Delighting in suffering, you can’t be liberated from suffering.
 {:#p2}
 
-3\. “Monks, when you don’t delight in form, you don’t delight in suffering. Not delighting in suffering, you can liberate yourself from suffering. Thus, when you don’t delight in sensation … perception … volition … consciousness, you don’t delight in suffering. Not delighting in suffering, you can liberate yourself from suffering.”
+3\. “Monks, when you don’t delight in form, you don’t delight in suffering. Not delighting in suffering, you can be liberated from suffering. Thus, when you don’t delight in feeling … perception … volition … consciousness, you don’t delight in suffering. Not delighting in suffering, you can be liberated from suffering.”
 {:#p3}
 
 4\. The monks who heard what the Buddha taught then rejoiced and approved.
@@ -25,18 +25,18 @@ next: SA1_145.html
 
 ###### Summary Verse
 * {:.verse}[1] Impermanent, [2] painful, [3] empty,\\
-And [4] not self; [5] correctly considered;\\
+And [4] not self; [5] correctly contemplated;\\
 [6-9] Four ways of not knowing;\\
 And [10] delighting in form.
 
 ### Notes
-1. {:#n1} This sutra is parallel to [SN 22.29](https://suttacentral.net/sn22.29){:target="_blank"} and SĀ 2.10. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 22.29](https://suttacentral.net/sn22.29){:target="_blank"} and SĀ 2.10. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 19 September 2020
 {: .revised}
 
 ---
