--- a/03_samyukta/SA_01/SA1_17.md
+++ b/03_samyukta/SA_01/SA1_17.md
@@ -14,10 +14,10 @@ next: SA1_145.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. If causes and conditions give rise to forms, they are also impermanent. Forms are created by impermanent causes and impermanent conditions. How could they be permanent? Thus, feeling … perception … volition … consciousness is impermanent. If causes and conditions give rise to consciousnesses, they are also impermanent. Consciousnesses are created by impermanent causes and impermanent conditions. How could they be permanent? Thus, monks, form is impermanent and feeling, perception, volition, and consciousness are impermanent. What’s impermanent then is painful. What’s painful then is not self. What’s not self then doesn’t belong to self.
+2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. If causes and conditions give rise to forms, they are also impermanent. Forms are created by impermanent causes and impermanent conditions. How could they be permanent? Thus, feeling … perception … volition … consciousness is impermanent. If causes and conditions give rise to consciousnesses, they are also impermanent. Consciousnesses are created by impermanent causes and impermanent conditions. How could they be permanent? Thus, monks, form is impermanent, and feeling, perception, volition, and consciousness are impermanent. What’s impermanent then is painful. What’s painful then is not self. What’s not self then doesn’t belong to self.
 {:#p2}
 
-3\. “Noble disciples who thus observe and tire of form and tire of feeling, perception, volition, and consciousness. Tiring of them, they don’t enjoy them. Not enjoying them, they are liberated. Being liberated, they know and see this: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+3\. “Noble disciples who thus observe and tire of form and tire of feeling, perception, volition, and consciousness. Tiring of them, they don’t enjoy them. Not enjoying them, [2b] they are liberated. Being liberated, they know and see this: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p3}
 
 4\. The monks who heard what the Buddha taught rejoiced and approved.
