Small heading change ea 24.5

--- a/04_ekottarika/EA_24_5.md
+++ b/04_ekottarika/EA_24_5.md
@@ -14,7 +14,7 @@ next: EA_43_07.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was sitting under the bodhi tree when he first became a Buddha.
 {:#p1}
 
-#### The First to Teach
+#### Who to Teach First
 
 2\. It was then that the Bhagavān had this thought, “Now, I have attained this profound teaching that’s hard to understand, hard to comprehend, hard to realize, and hard to know. It’s an extremely subtle and sublime knowledge [618b] that I’ve realized and known. Now, to whom will I explain this teaching first? Who’ll understand this teaching of mine?”
 {:#p2}
