--- a/02_madhyama/04_Discernment/15_Pairs/MA_186.md
+++ b/02_madhyama/04_Discernment/15_Pairs/MA_186.md
@@ -4,7 +4,7 @@ title: 'The Medium Discourses | Chapter 15: Pairs | 186. Inquiry'
 type: kramdown
 base: ../../../
 previous: ../../02_Lesser_Lands_and_Cities/09_Cause/MA_098.html
-next: ../../index.html
+next: ../../../01_agama/madhyama/MA_200.html
 ---
 
 # [The Medium Discourses](../../index.html)
