--- a/02_madhyama/05_Last/17_Potalaka/MA_204.md
+++ b/02_madhyama/05_Last/17_Potalaka/MA_204.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Medium Discourses | Chapter 17: Potalaka | 204. Raṃbhaka'
 type: kramdown
 base: ../../../
-previous: ../../04_Discernment/15_Pairs/MA_186.html
+previous: ../../../01_agama/madhyama/MA_200.html
 next: ../../index.html
 ---
 
