--- a/03_samyukta/SA_35/SA35_7.md
+++ b/03_samyukta/SA_35/SA35_7.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 35. Views | 7. The Cause of Attachment and Sorrow'
 type: kramdown
 base: ../../
-previous: index.html
+previous: ../../01_agama/samyukta/35/SA35_1.html
 next: SA35_40.html
 ---
 
