--- a/01_agama/samyukta/35/SA35_1.md
+++ b/01_agama/samyukta/35/SA35_1.md
@@ -58,7 +58,7 @@ They replied, “It’s painful, Bhagavān.”
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with the six abodes of views section of [MN 22](https://suttacentral.net/mn22){:target="_blank"} and [MA 200](../../madhyama/MA_200.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with the six abodes of views section of [MN 22](https://suttacentral.net/mn22){:target="_blank"} and [MĀ 200](../../madhyama/MA_200.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
