--- a/03_samyukta/SA_01/SA1_145.md
+++ b/03_samyukta/SA_01/SA1_145.md
@@ -14,7 +14,7 @@ next: SA1_146.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Form is not self. If form were self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be the desires: ‘Let form be thus; let it not be thus.’ It’s because form is without self that there’s illness and pain that arise from form, and these desires are possible: ‘Let form be thus; let it not be thus.’ *Feeling, perception, volition, and consciousness are likewise.*
+2\. It was then that the Bhagavān addressed the monks, “Form is not self. If form were self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be the desires: ‘Let form be this way’ or ‘let it not be this way.’ It’s because form is without self that there’s illness and pain that arise from form, and these desires are possible: ‘Let form be this way’ or ‘let it not be this way.’ *Feeling, perception, volition, and consciousness are likewise.*
 {:#p2}
 
 3\. “Monks, what do you think? Is form permanent, or is it impermanent?”
@@ -25,20 +25,20 @@ The monks said to the Buddha, “Impermanent, Bhagavān.”
 4\. “Monks, if something is impermanent, is it painful?”
 {:#p4}
 
-The monks said to the Buddha, “It’s painful, Bhagavān.”
+The monks said to the Buddha, “It’s painful, [7c] Bhagavān.”
 
 5\. “If it’s impermanent and painful, it’s something that changes. Would the well-versed noble disciple see self, something other than self, or both in it?”
 {:#p5}
 
 The monks said to the Buddha, “No, Bhagavān.”
 
-6\. “*Feeling, perception, volition, and consciousness are likewise.* Therefore, monks, all forms that exist, whether past, future, or present, whether internal or external, crude or fine, lovely or ugly, and far or near, they are all not self, not other than self, and not both. They are thus to be contemplated. *Feeling, perception, volition, and consciousness are likewise.*
+6\. “*Feeling, perception, volition, and consciousness are likewise.* Therefore, monks, all forms that exist in past, future, or present, whether they are internal or external, crude or fine, lovely or ugly, and far or near, are not self, not other than self, and not both. Observe them in this way. *Feeling, perception, volition, and consciousness are likewise.*
 {:#p6}
 
-7\. “Monks, the well-versed noble disciple contemplates as it really is that what’s in these five acquired aggregates is not self and doesn’t belong to self. After contemplating this as it really is, they grasp nothing from all the world. Because they grasp nothing, they attach to nothing. Because they attach to nothing, they self-awaken to nirvāṇa: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+7\. “Monks, the well-versed noble disciple observes as it really is that what’s in these five acquired aggregates is not self and doesn’t belong to self. After observing this as it really is, they grasp nothing from all the world. Because they grasp nothing, they attach to nothing. Because they attach to nothing, they awaken themselves to nirvāṇa: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p7}
 
-8\. After the Buddha spoke this sutra, the monks who heard what the Buddha taught rejoiced and approved.
+8\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p8}
 
 ### Notes
@@ -49,7 +49,7 @@ The monks said to the Buddha, “No, Bhagavān.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 5 October 2020
 {: .revised}
 
 ---
